# local-voice-assistant-codex

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/rules/: default.rules
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: config.py  conversations.py  health.py  llm.py  orchestrator.py  realtime_ws.py  stt.py  tts.py
backend/app/config/: __init__.py  config.sample.toml  file_loader.py  redaction.py  resolver.py  settings.py
backend/app/schemas/: config_summary.py  conversations.py  llm.py  orchestrator.py  realtime_ws.py  stt.py  tts.py
backend/app/services/: conversation_db.py  conversation_store.py  llm_client.py  model_loader.py  orchestrator.py  realtime_ws.py  transcription.py  tts_engine.py
backend/tests/: test_config_precedence.py  test_config_summary.py  test_config_validation.py  test_conversations_append.py  test_conversations_delete.py  test_conversations_get.py  test_conversations_list.py  test_errors.py  test_llm_complete.py  test_llm_errors.py  test_orchestrator_errors.py  test_orchestrator_flow.py  test_realtime_ws_response.py  test_realtime_ws_status.py  test_realtime_ws_stream.py  test_stt_file.py  test_stt_stream.py  test_tts_errors.py  test_tts_synthesize.py  test_tts_voice.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: page.tsx
(+100 files in other folders)
